--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "protractor",
+  "name": "protractor-testObject",
   "description": "Webdriver E2E test wrapper for Angular.",
   "homepage": "https://github.com/angular/protractor",
   "keywords": [
