changed package name to be acceptable for new package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "protractorTestObject",
+  "name": "protractor-test-object",
   "description": "Webdriver E2E test wrapper for Angular.",
   "homepage": "https://github.com/angular/protractor",
   "keywords": [
